# WiredWolf

./: .gitattributes  README.md  pyproject.toml
src/wiredwolf/controller/: __init__.py  commons.py  connections.py  controller.py  lobbies.py  server.py  services.py
src/wiredwolf/model/: game.py  game_modifiers.py  player.py
src/wiredwolf/view/: App.py  Components.py  Constants.py  __init__.py
tests/: connectionTest.py  controllerTest.py  game_actions_test.py  game_phase_test.py  game_test.py  game_voting_test.py  helloWorldTest.py  lobbyTest.py  lobbyTests.py  player_test.py  serverTest.py
